fixed the documentation buttons on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,8 @@ ul.nav li.dropdown:hover ul.dropdown-menu {
 	padding: 3px 35px 3px 25px;	
 	font-size: 20px;	
 	color: white;
-	margin-right: 5px;	
+	margin-right: 5px;
+	margin-bottom: 5px;	
 }
 
 .documentation-buttons button a {
